Fixed width issue on some pages where content was off screen

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,7 +3,7 @@
   padding: 20px;
   z-index:-1;
 }
-.logo {
+.container.logo {
   position: fixed;
   width: 100%;
 	background-color: #428bca;
@@ -19,4 +19,22 @@
     float: right;
   }
 }
+@media (min-width: 1200px){
+  .container {
+       width: auto;
+  }
+}
+  
+@media (min-width: 992px){
+  .container {
+       width: auto;
+  }
+}
+  
+@media (min-width: 768px){
+  .container {
+       width: auto;
+  }
+}
+  
 
